Fixes to spacing

--- a/htdocs/themes/berlin_mcjc/sass/_header.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_header.scss
@@ -75,7 +75,6 @@ header {
     font-size: 2em;
     line-height: 1.4em;
     font-weight: bold;
-    letter-spacing: 0.1em;
 
     a,
     a:hover,
