--- a/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
@@ -15,6 +15,7 @@
 
       .item-title {
         background: $accent-color;
+        font-weight: bold;
         opacity: 0.85;
         display: none;
         padding: 1em;
@@ -24,7 +25,7 @@
         position: absolute;
         bottom: 0;
         text-align: center;
-        color: #fff;
+        color: white;
         width: 100%;
       }
 
@@ -72,7 +73,12 @@
         padding: 1em;
         height: 100%;
 
-        h2 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
           margin-top: 0;
           position: relative;
           top: calc(
@@ -88,8 +94,15 @@
 
       &.has-picture,
       &.has-description {
-        .item-meta h2 {
-          top: 0;
+        .item-meta {
+          h1,
+          h2,
+          h3,
+          h4,
+          h5,
+          h6 {
+            top: 0;
+          }
         }
       }
     }
