--- a/htdocs/themes/berlin_mcjc/sass/_people.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_people.scss
@@ -3,6 +3,10 @@
   #content > .oral-histories,
   #content > .related-items {
     @include container;
+    margin-top: 96px;
+  }
+  #content > .oral-histories {
+    margin-top: 48px;
   }
 
   .header-background-container {
