--- a/htdocs/themes/berlin_mcjc/sass/_person.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_person.scss
@@ -38,14 +38,17 @@
     @include container;
 
     .oral-history {
+      margin-top: 48px;
       display: grid;
       grid-template-columns: 54% 10% 36%;
       grid-template-rows: auto auto;
       grid-template-areas: "head . ." "info . sound" "button . .";
+      grid-row-gap: 1em;
 
       h2 {
         grid-area: head;
         font-weight: bold;
+        margin-bottom: 0;
       }
 
       .player-element {
@@ -55,8 +58,6 @@
 
       .item-description {
         grid-area: info;
-        height: auto;
-        margin: 20px;
       }
 
       a.button.item-link {
@@ -69,18 +70,16 @@
 div.explore-grid.related-items {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 96px;
   justify-content: center;
   h2 {
     inline-size: -webkit-fill-available;
   }
 }
 
-.in-the-community {
+#content > .in-the-community {
   background-color: $white;
-  margin-top: 96px;
   width: 100%;
-  margin-bottom: 60px;
+  margin-top: 96px;
   h3 {
     margin-bottom: 0;
     font-weight: bolder;
