--- a/htdocs/themes/berlin_mcjc/sass/_typography.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_typography.scss
@@ -43,30 +43,35 @@ h2,
 .h2 {
   font-size: 2em;
   line-height: 1.4em;
+  margin-bottom: 0.7em;
 }
 
 h3,
 .h3 {
   font-size: 1.5em;
   line-height: 1.4em;
+  margin-bottom: 0.7em;
 }
 
 h4,
 .h4 {
   font-size: 1.333em;
   line-height: 1.4em;
+  margin-bottom: 0.7em;
 }
 
 h5,
 .h5 {
   font-size: 1.211em;
   line-height: 1.4em;
+  margin-bottom: 0.7em;
 }
 
 h6,
 .h6 {
   font-size: 1.125em;
   line-height: 1.4em;
+  margin-bottom: 0.7em;
 }
 
 h1 a,
